openshift/template/deployment-config.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/route-disabled: 'false'
    openshift.io/generated-by: OpenShiftWebConsole
  name: APP_NAME
  namespace: APP_PROJECT
  labels:
    app: APP_NAME
    app.kubernetes.io/component: APP_NAME
    app.kubernetes.io/instance: APP_NAME
    app.kubernetes.io/name: APP_NAME
    app.kubernetes.io/part-of: APP_NAME
    app.openshift.io/runtime: 3scale
    app.openshift.io/runtime-namespace: APP_PROJECT
    app.openshift.io/runtime-version: APP_NAME
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - APP_NAME
        from:
          kind: ImageStreamTag
          name: 'APP_NAME:latest'
          namespace: APP_PROJECT
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: APP_NAME
    deploymentconfig: APP_NAME
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: APP_NAME
        deploymentconfig: APP_NAME
    spec:
      volumes:
        - name: APP_NAME-config
          configMap:
            name: APP_NAME-config
            items:
              - key: .env
                path: .env.local
            defaultMode: 444
      containers:
        - name: APP_NAME
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: APP_NAME-config
              readOnly: true
              mountPath: /app/.env.local
              subPath: .env.local
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
